<resources>
    <string name="app_name">Island Watch Nest Reporter</string>
    <string name="sync_service_name">Nest Reporter Server Sync</string>
    <string name="other">Other</string>
    <string name="date_button">Set Date</string>
    <string name="feet_short">ft</string>
    <string name="inches_short">in</string>
    <string name="cancel">Cancel</string>
    <string name="accept">Accept</string>
    <string name="clear">Clear</string>
    <string name="action_change_reports">Change Report</string>
    <string name="action_new_report">New Report</string>
    <string name="action_delete_report">Delete Report</string>
    <string name="action_restore_from_server">Restore From Server</string>
    <string name="edit_info_label_section_number">Section Number</string>
    <string name="edit_info_label_nest_number">Nest Number</string>
    <string name="edit_info_label_false_crawl_number">False Crawl Number</string>
    <string name="edit_info_label_date_found">Date Crawl Found</string>
    <string name="edit_info_label_date_incubation">55 Day Incubation Date</string>
    <string name="edit_info_label_observers">Observers</string>
    <string name="edit_info_label_activity_details">Activity Details</string>
    <string name="edit_info_label_nest_verified">Nest Verified</string>
    <string name="edit_info_label_nest_not_verified">Nest Not Verified</string>
    <string name="edit_info_label_nest_relocated">Nest Relocated</string>
    <string name="edit_info_label_false_crawl">False Crawl</string>
    <string name="edit_info_label_abandoned_body_pits">Abandoned Body Pits</string>
    <string name="edit_info_label_abandoned_egg_cavities">Abandoned Egg Cavities</string>
    <string name="edit_info_label_no_digging">No Digging</string>
    <string name="edit_info_label_species">Species</string>
    <string name="edit_info_label_species_loggerhead">Loggerhead</string>
    <string name="edit_info_label_species_green">Green</string>
    <string name="edit_info_label_species_other">Other</string>
    <string name="edit_info_label_marking_strategy">Marking Strategy</string>
    <string name="edit_nest_location_label_gps">GPS Coordinates</string>
    <string name="edit_nest_location_triangulation">Triangulation</string>
    <string name="edit_nest_location_triangulation_north">North</string>
    <string name="edit_nest_location_triangulation_south">South</string>
    <string name="edit_nest_location_button_gps">Get GPS</string>
    <string name="edit_nest_location_original_address">Original Address</string>
    <string name="edit_nest_location_anna_maria_short">AM</string>
    <string name="edit_nest_location_bradenton_beach_short">BB</string>
    <string name="edit_nest_location_holms_beach_short">HB</string>
    <string name="edit_nest_location_city">City</string>
    <string name="edit_nest_location_details">Details</string>
    <string name="edit_nest_location_location">Location</string>
    <string name="edit_nest_location_open_beach">Open Beach</string>
    <string name="edit_nest_location_in_vegitation">In Vegetation</string>
    <string name="edit_nest_location_at_vegitation">At Vegetation</string>
    <string name="edit_nest_location_at_escarpment">At Escarpment</string>
    <string name="edit_nest_location_on_escarpment">On Escarpment</string>
    <string name="edit_nest_location_obstructions">Obstructions</string>
    <string name="edit_nest_location_seawall_rocks">Seawall / Rocks</string>
    <string name="edit_nest_location_furniture">Furniture</string>
    <string name="edit_nest_location_escarpment">Escarpment</string>
    <string name="edit_nest_location_apex_to_barrier">Apex to upland barrier</string>
    <string name="edit_nest_location_water_to_apex">Water line to apex</string>
    <string name="edit_nest_relocation_was_relocated">Was nest relocated?</string>
    <string name="edit_nest_relocation_date_relocated">Date relocated</string>
    <string name="edit_nest_relocation_new_address">New address</string>
    <string name="edit_nest_relocation_new_gps_coordinates">New GPS coordinates</string>
    <string name="edit_nest_relocation_num_eggs_relocated">Number of eggs relocated</string>
    <string name="edit_nest_relocation_num_eggs_destroyed">Number of eggs destroyed</string>
    <string name="edit_nest_relocation_reason">Reason for relocation</string>
    <string name="edit_nest_relocation_high_water">High water</string>
    <string name="edit_nest_relocation_predation">Predation</string>
    <string name="edit_nest_relocation_washing_out">Washing Out</string>
    <string name="edit_nest_relocation_construction">Construction / Renourishment</string>
    <string name="edit_nest_condition_wash_over">Nest Wash Over</string>
    <string name="edit_nest_condition_washout">Complete Washout</string>
    <string name="edit_nest_condition_partial_washout">Partial Washout</string>
    <string name="edit_nest_condition_storm_name">Storm Name</string>
    <string name="edit_nest_condition_predataion">Nest Predation - Standing Water</string>
    <string name="edit_nest_condition_predator">Predator</string>
    <string name="edit_nest_condition_num_eggs"># of Eggs</string>
    <string name="edit_nest_condition_damage">Nest damage</string>
    <string name="edit_nest_condition_damage_contact_suzi">
        Please contact Suzi for any human damages
    </string>
    <string name="edit_nest_condition_damage_vandalized">Vandalized</string>
    <string name="edit_nest_condition_damage_vandalism_stakes_removed">Stakes Removed</string>
    <string name="edit_nest_condition_damage_vandalism_dug_into">Nest Dug Into</string>
    <string name="edit_nest_condition_damage_vandalism_eggs_affected">Eggs Removed</string>
    <string name="edit_nest_condition_damage_poached">Poached</string>
    <string name="edit_nest_condition_damage_poached_eggs_removed">Eggs Removed</string>
    <string name="edit_nest_condition_damage_roots_invaded">Roots invaded eggshells</string>
    <string name="edit_nest_condition_damage_eggs_scattered">Eggs scattered by another</string>
    <string name="edit_nest_care_adopted">Is nest adopted?</string>
    <string name="edit_nest_care_date_protected">Initial Date Protected</string>
    <string name="edit_nest_care_type_of_protection">Type of protection?</string>
    <string name="edit_nest_care_self_releasing_cage">Self releasing cage</string>
    <string name="edit_nest_care_self_releasing_flat">Self releasing flat</string>
    <string name="edit_nest_care_restraining_cage">Restraining cage</string>
    <string name="edit_nest_care_when_protected">When protected?</string>
    <string name="edit_nest_care_before_predation">Before predation</string>
    <string name="edit_nest_care_after_predation">After predation</string>
    <string name="edit_nest_care_for_light_problem">For light problem</string>
    <string name="hatch_data_title">Hatch Data</string>
    <string name="hatch_data_hatch_date">Actual hatch date</string>
    <string name="hatch_data_hatch_add_date">Additional hatch date</string>
    <string name="hatch_data_disorientation">Disorientation?</string>
    <string name="hatch_data_monitor_daily">Did you monitor the nest daily?</string>
    <string name="excavation_data_title">Excavation Data</string>
    <string name="excavation_data_excavated">Excavated</string>
    <string name="excavation_data_inundated">Standing water in cavity?</string>
    <string name="excavation_data_reason_no_excavation">Why not?</string>
    <string name="excavation_data_eggs_not_found">Eggs not found</string>
    <string name="excavation_data_eggs_too_decayed">Eggs / Hatchlings too decayed to inventory</string>
    <string name="excavation_data_excavation_date">Excavation Date</string>
    <string name="excavation_data_dead_in_nest">Dead in nest</string>
    <string name="excavation_data_live_in_nest">Live in nest</string>
    <string name="excavation_data_hatched_shells">Hatched shells</string>
    <string name="excavation_data_dead_pipped">Dead pipped</string>
    <string name="excavation_data_live_pipped">Live pipped</string>
    <string name="excavation_data_whole_unhatched">Whole Unhatched</string>
    <string name="excavation_data_eggs_damaged">Eggs damaged</string>
    <string name="excavation_data_total_eggs">Total eggs</string>
    <string name="excavation_data_outside_nest">Eggs outside nest</string>
    <string name="excavation_data_hatchlings_handled">How were hatchlings handled?</string>
    <string name="edit_pictures_capture_image">Capture Image</string>
    <string name="edit_nest_condition_post_hatch_washout">Complete Washout Occured Post-Hatch,\n but Pre-Inventory</string>
    <string name="edit_nest_condition_nest_inundated">Nest Inundated</string>
    <string name="edit_nest_condition_damage_nest_depredated">Nest Completely Depredated</string>
    <string name="edit_nest_condition_damage_another_turtle">Eggs Damaged by Another Turtle</string>
    <string name="edit_nest_condition_inundated_event">Nest Inundated - Standing Water</string>
    <string name="edit_nest_location_escarpment_over_18_inches">Escarpment Over 18 Inches</string>
    <string name="edit_nest_location_relocation">Nest Relocated</string>
    <string name="edit_nest_condition_predation_eggs_only">Nest Predation - Eggs Only</string>
    <string name="give_reason_text">When Other is selected, you must specify why no excavation was done.</string>
    <string name="edit_nest_location_within_replacement_area">Within Cortez Groin Replacement Area</string>
    <string name="edit_nest_condition_nest_dug_into">Nest Dug Into</string>
    <string name="hintAdoptee">Adoptee</string>
    <string name="edit_info_label_possible_false_crawl">Possible False Crawl</string>
    <string name="OK">OK</string>
    <string name="confirmChangeReport">Are you sure you want to edit this report?</string>
    <string name="edit_nest_location_coastal_armoring">Man-made structure on the beach</string>
    <string name="edit_seaward_of_armoring_structure">Is the nest seaward of a man-made structure on the beach?</string>
    <string name="edit_within_3_feet">Nest within 3 feet of structure</string>
    <string name="edit_type_of_structure">Type of Structure</string>
    <string name="edit_actively_record_predation_events">Do you actively look for\nand record predation events?</string>
    <string name="edit_describe_control_methods">If predator control methods other than screening/caging were employed, please describe</string>
    <string name="edit_prop_recorded_events">What proportion of mammalian predation events are you likely recording?</string>
    <string name="edit_all">All</string>
    <string name="edit_most">Most</string>
    <string name="edit_some">Some</string>
    <string name="edit_few">Few</string>
    <string name="edit_provide_notes">(Provide details in the Notes Section.)</string>
    <string name="edit_num_eggs"># of Eggs</string>
    <string name="edit_secondary_predator">List Secondary Predators</string>
    <string name="edit_storm_name">Storm Name</string>
    <string name="edit_add_accretion_event"><u>+Add Accretion Event</u></string>
    <string name="edit_accretion_header">Accretion</string>
    <string name="edit_damage_10_or_fewer">Did ghost crabs damage fewer than 10 eggs?</string>
    <string name="title_other_storm_impact">Other Storm Impact (Be specific)</string>
    <string name="hint_other_details">Please enter details here</string>
    <string name="add_wash_over_text"><u>+Add Wash over Event</u></string>
    <string name="add_inundation_event_text"><u>+Add Inundation Event</u></string>
    <string name="examples_of_structure_text">(Examples are seawalls, sand fencing, bulkheads and rock piles, but not buildings, lifeguard towers or individual posts.)</string>
    <string name="possible_false_crawl_number">Possible False Crawl Number</string>
    <string name="edit_nest_location_label_latitude">Latitude</string>
</resources>