<?xml version="1.0" encoding="utf-8"?>
<ScrollView  xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content">
	<TableLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content" >
	
	   <TableRow
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content" >
	
	        <TextView
	            android:layout_width="0dp"
	            android:layout_height="wrap_content"
	            android:layout_weight="1"
	            android:text="@string/edit_nest_location_label_gps" />
	
	        <Button
	            android:id="@+id/buttonGps"
	            android:text="@string/edit_nest_location_button_gps" 
	           android:onClick="handleClick" />
	    </TableRow>
	    <TableRow
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content" >
	        <TextView
	            android:text="@string/edit_nest_location_original_address" />
	
	        <com.islandturtlewatch.nest.reporter.ui.MonitoredEditText
	            android:id="@+id/fieldAddress"
	            android:inputType="textPostalAddress"
	            android:layout_width="0dp"
	            android:layout_height="wrap_content"
	            android:layout_weight="1"
	            android:ems="10"
	            onTextChangeHandler="handleTextChange" />
	   </TableRow>
	   <TableRow
	       android:layout_width="wrap_content"
	       android:layout_height="wrap_content" >
	       <TextView
             style="@style/CheckboxHeader"
	           android:text="@string/edit_nest_location_city"/>
	   </TableRow>
	   <TableRow
	       android:layout_width="wrap_content"
	       android:layout_height="wrap_content" >
	       <CheckBox
	           android:id="@+id/fieldLocationAM"
	           android:layout_width="0dp"
	           android:layout_height="wrap_content"
	           android:layout_weight="1"
	           android:text="@string/edit_nest_location_anna_maria_short"
	           android:onClick="handleClick" />
	       
	       <CheckBox
	           android:id="@+id/fieldLocationHB"
	           android:layout_width="0dp"
	           android:layout_height="wrap_content"
	           android:layout_weight="1"
	           android:text="@string/edit_nest_location_holms_beach_short"
	           android:onClick="handleClick" />
	       
	       <CheckBox
	           android:id="@+id/fieldLocationBB"
	           android:layout_width="0dp"
	           android:layout_height="wrap_content"
	           android:layout_weight="1"
	           android:text="@string/edit_nest_location_bradenton_beach_short"
	           android:onClick="handleClick" />
	       
	   </TableRow>
	   <TableRow
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content" >
	        <TextView
	            android:text="@string/edit_nest_location_details" />
	
	        <com.islandturtlewatch.nest.reporter.ui.MonitoredEditText
	            android:id="@+id/fieldDetails"
	            android:inputType="textMultiLine"
	            android:layout_width="0dp"
	            android:layout_height="wrap_content"
	            android:layout_weight="1"
	            android:ems="10"
	            onTextChangeHandler="handleTextChange" />
	   </TableRow>
	   <TableRow
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content" >
	        <TextView
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_weight="1"
	            android:layout_marginBottom="10dp"
	            android:text="@string/edit_nest_location_apex_to_barrier" />
	
	        <com.islandturtlewatch.nest.reporter.ui.MonitoredEditText
	            android:id="@+id/fieldApexToBarrier_ft"
	            android:inputType="number"
	            android:ems="4"
	            onTextChangeHandler="handleTextChange"/>
	        <TextView
	            android:text="@string/feet_short" 
	            android:ems="1"/>
	        
	        <com.islandturtlewatch.nest.reporter.ui.MonitoredEditText
	            android:id="@+id/fieldApexToBarrier_in"
	            android:inputType="number"
	            android:ems="2"
	            onTextChangeHandler="handleTextChange"/>
	        <TextView
	            android:text="@string/inches_short" 
	            android:ems="1"/>
	   </TableRow>
	   <TableRow
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content" >
	        <TextView
	            android:layout_width="0dp"
	            android:layout_height="wrap_content"
	            android:layout_weight="1"
	            android:text="@string/edit_nest_location_water_to_apex" />
	
	        <com.islandturtlewatch.nest.reporter.ui.MonitoredEditText
	            android:id="@+id/fieldWaterToApex_ft"
	            android:inputType="number"
	            android:ems="1"
	            onTextChangeHandler="handleTextChange"/>
	        <TextView
	            android:text="@string/feet_short" />
	        
	        <com.islandturtlewatch.nest.reporter.ui.MonitoredEditText
	            android:id="@+id/fieldWaterToApex_in"
	            android:inputType="number"
	            android:ems="1"
	            onTextChangeHandler="handleTextChange"/>
	        <TextView
	            android:text="@string/inches_short" />
	   </TableRow>
	   <TableRow
	       android:layout_width="wrap_content"
	       android:layout_height="wrap_content" >
	       <TextView
             style="@style/Header"
	           android:text="@string/edit_nest_location_location" />
	   </TableRow>
	   <TableRow
	       android:layout_width="wrap_content"
	       android:layout_height="wrap_content" >
	
	       <CheckBox
	           android:id="@+id/fieldLocationOpenBeach"
	           android:layout_width="0dp"
	           android:layout_height="wrap_content"
	           android:layout_weight="1"
	           android:text="@string/edit_nest_location_open_beach"
	           android:onClick="handleClick" />
	       
	       <CheckBox
	           android:id="@+id/fieldLocationInVegitation"
	           android:layout_width="0dp"
	           android:layout_height="wrap_content"
	           android:layout_weight="1"
	           android:text="@string/edit_nest_location_in_vegitation"
	           android:onClick="handleClick" />
	       
	       <CheckBox
	           android:id="@+id/fieldLocationAtVegitation"
	           android:layout_width="0dp"
	           android:layout_height="wrap_content"
	           android:layout_weight="1"
	           android:text="@string/edit_nest_location_at_vegitation"
	           android:onClick="handleClick" />
	       
	   </TableRow>
	   <TableRow
	       android:layout_width="wrap_content"
	       android:layout_height="wrap_content" >
	
	       <CheckBox
	           android:id="@+id/fieldLocationAtEscarpment"
	           android:layout_width="0dp"
	           android:layout_height="wrap_content"
	           android:layout_weight="1"
	           android:text="@string/edit_nest_location_at_escarpment"
	           android:onClick="handleClick" />
	       <CheckBox
	           android:id="@+id/fieldLocationOnEscarpment"
	           android:layout_width="0dp"
	           android:layout_height="wrap_content"
	           android:layout_weight="1"
	           android:text="@string/edit_nest_location_on_escarpment"
	           android:onClick="handleClick" />
	   </TableRow>
		<TableRow
			android:layout_width="wrap_content"
			android:layout_height="wrap_content" >

		<CheckBox
			android:id="@+id/fieldLocationEscarpmentOver18Inches"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:text="@string/edit_nest_location_escarpment_over_18_inches"
			android:onClick="handleClick" />
		</TableRow>
	   
	   <TableRow
	       android:layout_width="wrap_content"
	       android:layout_height="wrap_content" >
	       <TextView
             style="@style/Header"
	           android:text="@string/edit_nest_location_obstructions" />
	   </TableRow>
	   <TableRow
	       android:layout_width="wrap_content"
	       android:layout_height="wrap_content" >
	
	       <CheckBox
	           android:id="@+id/fieldObstructionsSeawallRocks"
	           android:layout_width="0dp"
	           android:layout_height="wrap_content"
	           android:layout_weight="1"
	           android:layout_marginBottom="5dp"
	           android:text="@string/edit_nest_location_seawall_rocks"
	           android:onClick="handleClick" />
	       
	       <CheckBox
	           android:id="@+id/fieldObstructionsFurniture"
	           android:layout_width="0dp"
	           android:layout_height="wrap_content"
	           android:layout_weight="1"
	           android:text="@string/edit_nest_location_furniture"
	           android:onClick="handleClick" />
	       
	       <CheckBox
	           android:id="@+id/fieldObstructionsEscarpment"
	           android:layout_width="0dp"
	           android:layout_height="wrap_content"
	           android:layout_weight="1"
	           android:text="@string/edit_nest_location_escarpment"
	           android:onClick="handleClick" />
	   </TableRow>
	   <TableRow
	       android:layout_width="wrap_content"
	       android:layout_height="wrap_content" >
	       
	       <TextView
	            android:text="@string/other" />
	       
	       <com.islandturtlewatch.nest.reporter.ui.MonitoredEditText
	            android:id="@+id/fieldObstructionsOther"
	            android:inputType="textMultiLine"
	            android:layout_width="0dp"
	            android:layout_height="wrap_content"
	            android:layout_weight="1"
	            android:ems="10"
	            onTextChangeHandler="handleTextChange" />
	   </TableRow>
	</TableLayout>
</ScrollView>